--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <!----------------------------------------------------------------------------------------------
 // IMVAL2001 IBM AI Course final project
 // =============================================================================================
-// Webapp Design and Deployment by: Chin Gon Sin
+// Webapp Design and Deployment by: Ng Chee Sin
 // Image Recognition Design and Deployment by: 
 // Webchat Design and Deployment by: 
 //==============================================================================================
