--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                                     <form action="/predict" method="post" enctype="multipart/form-data" class="services-link">
                                         <!--Display: Image Upload-->
                                             <div class="drop-zone">
-                                                <spans>Click to upload</spans>
+                                                <spans>Click to upload link</spans>
                                                 <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
