--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,7 @@
                                         <!--Display: Image Upload-->
                                             <div class="drop-zone">
                                                 <spans>Click to upload link</spans>
+                                                <a href="https://pupclassification.herokuapp.com/">
                                                 <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
