--- a/templates/index.html
+++ b/templates/index.html
@@ -84,8 +84,8 @@
                                     <form action="/predict" method="post" enctype="multipart/form-data" class="services-link">
                                         <!--Display: Image Upload-->
                                             <div class="drop-zone">
-                                                #<spans>Click to upload</spans>
-                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> #Praveen Dog Identification link
+                                                // <spans>Click to upload</spans>
+                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> // Praveen Dog Identification link
                                                 <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
