--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                                         <!--Display: Image Upload-->
                                             <div class="drop-zone">
                                                 <!--<spans>Click to upload</spans>-->
-                                                <a href="https://pupclassification.herokuapp.com/" target="_blank">, // Praveen Dog Identification link
+                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                                 <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
