--- a/templates/index.html
+++ b/templates/index.html
@@ -82,16 +82,16 @@
                             <div class="services-hover">
                                 <div class="services-hover-content">
                                     <form action="/predict" method="post" enctype="multipart/form-data" class="services-link">
+                                        <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                         <!--Display: Image Upload-->
-                                            <div class="drop-zone">
+                                            <!--div class="drop-zone"-->
                                                 <!--<spans>Click to upload</spans>-->
-                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                                 <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
                                                 -->
                                                 
-                                                <input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'>
+                                                <--input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'-->
                                                 
                                             </div>
                                     </form>
