--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                                                         <input type=submit value=Upload>
                                                 -->
                                                 
-                                                <--input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'-->
+                                                <!--input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'-->
                                                 
                                             </div>
                                     </form>
