--- a/templates/index.html
+++ b/templates/index.html
@@ -274,7 +274,7 @@ radius: 0px 0px 20px 20px;">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start">Copyright &copy; Dog Lovers Paradise 2022<br><span style="color: 
 
-darkgrey;">Designed by Chin Gon Sin</span></div>
+darkgrey;">Designed by IMVAI-2001 AI Practitioner team 3: Praveen Kumar, Ong Siok Hoon (Iris), Chin Gon Sin, Ng Chee Sin, Robin Lim and Tan Wei Hong</span></div>
                 <!--
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
