--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <!----------------------------------------------------------------------------------------------
 // IMVAL2001 IBM AI Course final project
 // =============================================================================================
-// Webapp Design and Deployment by: Ng Chee Sin
-// Image Recognition Design and Deployment by: 
-// Webchat Design and Deployment by: 
+// Webapp Design and Deployment by: Chin Gon Sin and Ng Chee Sin
+// Image Recognition Design and Deployment by: Praveen Kumar
+// Webchat Design and Deployment by: Robin Lim, Ong Siok Hoon (Iris) and Tan Wei Hong
 //==============================================================================================
 -->
 
