--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@ radius: 0px 0px 20px 20px;">
                 <br>
                 <p>
                 <span style="color: darkgrey; font-size: 10px; text-align: center; font-style:italic">
-                    * Disclaimer: For the purpose of this final project for IMVAL2001, our dataset is limited to only a few breeds as the total size of all the breeds is outside the free storage capacity of online app deployment platform.</span>
+                    * Disclaimer: For the purpose of this final project for IMVAI-2001, our dataset does not cover all the breeds as the total size of all the breeds is outside the free storage capacity of online app deployment platform.</span>
             </div>
         </div>
     </section>
