--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             <div class="services-caption-heading">Identify Dog Breed</div>
-                            <div class="services-caption-subheading text-muted">Upload any dog photos and get an instant dog breed identification.</div>
+                            <div class="services-caption-subheading text-muted">Upload any dog photo and get an instant dog breed identification.</div>
                         </div>
                     </div>
                 </div>
