--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
                     <div class="services-item">
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
-                                <div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>
+                                <!--<div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>-->
                                 <a href="https://www.wikihow.pet/Take-Care-of-a-Dog" target="_blank"> 
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/6w5t77h/pexels-ivan-babydov-7788657.jpg" alt="..." />
