--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,8 @@ radius: 0px 0px 20px 20px;">
                     <div class="services-item">
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
-                                <div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>
+                                <!--<div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>-->
+                                <a href="https://www.youtube.com/watch?v=5z3i5IsBVnk&t=95s" target="_blank"> 
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/4WJGgvz/pexels-cottonbro-6568950.jpg" alt="..." />
                         </a>
