--- a/templates/index.html
+++ b/templates/index.html
@@ -99,9 +99,7 @@
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/R9nKnQ1/pexels-caio-69371.jpg" alt="..." />
                         </a>
-                        <div class="services-caption" style="background-color: rgba(248, 249, 250); border-
-
-radius: 0px 0px 20px 20px;">
+                        <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             <div class="services-caption-heading">Identify Dog Breed</div>
                             <div class="services-caption-subheading text-muted">Upload any dog photo and get an instant dog breed identification.</div>
                         </div>
