--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,15 @@ radius: 0px 0px 20px 20px;">
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
                                 <!--<div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>-->
-                                <a href="https://www.youtube.com/watch?v=ilgM5IYjIG8" target="_blank"> 
+                                <!--a href="https://www.youtube.com/watch?v=ilgM5IYjIG8" target="_blank"-->
+                                <!DOCTYPE html>
+                                <html>
+                                <body>
+                                <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/ilgM5IYjIG8">
+                                </iframe>
+                                </body>
+                                </html>
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/4WJGgvz/pexels-cottonbro-6568950.jpg" alt="..." />
                         </a>
