--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,7 @@
                         </div>
                     </div>
                 </div>
+            
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <!-- take care -->
                     <div class="services-item">
@@ -115,21 +116,21 @@
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/6w5t77h/pexels-ivan-babydov-7788657.jpg" alt="..." />
                         </a>
-                        <div class="services-caption" style="background-color: rgba(248, 249, 250); border-
-
-radius: 0px 0px 20px 20px;">
+                        <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
+                            
                             <div class="services-caption-heading">Taking Care of dogs</div>
                             <div class="services-caption-subheading text-muted">New to dog ownership and need to learn the basics? Find answers to dog care questions.</div>
                         </div>
                     </div>
                 </div>
+                    
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <!-- diet -->
                     <div class="services-item">
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
                                 <!--<div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>-->
-                                <!--a href="https://www.youtube.com/watch?v=ilgM5IYjIG8" target="_blank"-->
+                                <!--Embed YouTube video-->
                                 <!DOCTYPE html>
                                 <html>
                                 <body>
@@ -141,9 +142,8 @@ radius: 0px 0px 20px 20px;">
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/4WJGgvz/pexels-cottonbro-6568950.jpg" alt="..." />
                         </a>
-                        <div class="services-caption" style="background-color: rgba(248, 249, 250); border-
-
-radius: 0px 0px 20px 20px;">
+                        <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
+                            
                             <div class="services-caption-heading">Dog's diet</div>
                             <div class="services-caption-subheading text-muted">Know more about what food should a healthy dog takes.</div>
                         </div>
