--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
                                 <div class="services-hover-content">
-                                    <!--<form action="/predict" method="post" enctype="multipart/form-data" class="services-link">-->
+                                    <form action="/predict" method="post" enctype="multipart/form-data" class="services-link">
                                         <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                         <!--Display: Image Upload-->
                                             <!--div class="drop-zone"-->
@@ -113,7 +113,7 @@
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
                                 <!--<div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>-->
-                                <a href="https://www.wikihow.pet/Take-Care-of-a-Dog" target="_blank"> 
+                                <a href="https://www.wikihow.pet/Take-Care-of-a-Dog" target="_blank"> <!--Weblink-->
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/6w5t77h/pexels-ivan-babydov-7788657.jpg" alt="..." />
                         </a>
