--- a/templates/index.html
+++ b/templates/index.html
@@ -83,9 +83,9 @@
                             <div class="services-hover">
                                 <div class="services-hover-content">
                                     <form action="/predict" method="post" enctype="multipart/form-data" class="services-link">
-                                        <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
-                                        <!--Display: Image Upload-->
-                                            <!--div class="drop-zone"-->
+                                       <!--Display: Image Upload-->
+                                            <div class="drop-zone">
+                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                                 <!--<spans>Click to upload</spans>-->
                                                 <!--
                                                         <input type=file name=file>
@@ -136,7 +136,8 @@
                                 <html>
                                 <body>
                                 <iframe width="560" height="315"
-                                src="https://www.youtube.com/embed/ilgM5IYjIG8">
+                                src="https://www.youtube.com/embed/ilgM5IYjIG8"
+                                frameborder="0" allowfullscreen>>
                                 </iframe>
                                 </body>
                                 </html>
