--- a/templates/index.html
+++ b/templates/index.html
@@ -86,13 +86,12 @@
                                        <!--Display: Image Upload-->
                                             <div class="drop-zone">
                                                 <spans>Click to upload</spans>
-                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
-                                                <!--
+                                                      <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
-                                                -->
-                                                
-                                                <!--input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'-->
+                                                       -->
+                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
+                                                <input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'>
                                                 
                                          </div>
                                     </form>
@@ -135,7 +134,7 @@
                                 <!DOCTYPE html>
                                 <html>
                                 <body>
-                                <iframe width="560" height="315"
+                                <iframe width="640" height="360"
                                 src="https://www.youtube.com/embed/ilgM5IYjIG8"
                                 frameborder="0" allowfullscreen>>
                                 </iframe>
