--- a/templates/index.html
+++ b/templates/index.html
@@ -82,16 +82,16 @@
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
                                 <div class="services-hover-content">
-                                    <form action="/predict" method="post" enctype="multipart/form-data" class="services-link">
+                                    <!--form action="/predict" method="post" enctype="multipart/form-data" class="services-link"-->
+                                    <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                        <!--Display: Image Upload-->
                                             <div class="drop-zone">
-                                                <spans>Click to upload</spans>
+                                                <!--<spans>Click to upload</spans>-->
                                                       <!--
                                                         <input type=file name=file>
                                                         <input type=submit value=Upload>
                                                        -->
-                                                <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
-                                                <input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'>
+                                                <!--<input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'>-->
                                                 
                                          </div>
                                     </form>
