--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
                                                 <!--<input type="file" name="file1" class="drop-zone__input" required="required" accept="image/*" onchange='if (this.value != 0) { this.form.submit(); this.form.reset(); }'>-->
                                                 
                                          </div>
-                                    </form>
+                                    <!--</form>-->
                                 </div>
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/R9nKnQ1/pexels-caio-69371.jpg" alt="..." />
