--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                     <div class="services-item">
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
-                                <div class="services-hover-content">
+                                <!--<div class="services-hover-content">-->
                                     <!--form action="/predict" method="post" enctype="multipart/form-data" class="services-link"-->
                                     <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                        <!--Display: Image Upload-->
