--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                                     <!--form action="/predict" method="post" enctype="multipart/form-data" class="services-link"-->
                                     <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
                                        <!--Display: Image Upload-->
-                                            <div class="drop-zone">
+                                            <!--div class="drop-zone">-->
                                                 <!--<spans>Click to upload</spans>-->
                                                       <!--
                                                         <input type=file name=file>
