--- a/templates/index.html
+++ b/templates/index.html
@@ -95,8 +95,8 @@
                                                 
                                          </div>
                                     <!--</form>-->
-                                </div>
-                            </div>
+                                <!--</div>-->
+                            <!--</div>-->
                             <img class="img-fluid" src="https://i.ibb.co/R9nKnQ1/pexels-caio-69371.jpg" alt="..." />
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
