--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                                     <!--</form>-->
                                 <!--</div>-->
                             </div>
-                            <img class="img-fluid" src="https://i.ibb.co/R9nKnQ1/pexels-caio-69371.jpg" alt="..." />
+                            <img class="img-fluid" src="https://www.dogmal.com/wp-content/uploads/2016/12/submit_photo.jpg" alt="..." />
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             <div class="services-caption-heading">Identify Dog Breed</div>
