--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,8 @@
                             <div class="services-hover">
                                 <!--<div class="services-hover-content">-->
                                     <!--form action="/predict" method="post" enctype="multipart/form-data" class="services-link"-->
-                                    <a href="https://pupclassification.herokuapp.com/" target="_blank"> <!--Praveen Dog Identification link-->
+                                    <a href="https://pupclassification.herokuapp.com/" target="popup" onclick="window.open('https://pupclassification.herokuapp.com/','popup','width=600,height=600'); return false;"> <!--Praveen Dog Identification link-->
+                                        Open Link in Popup
                                        <!--Display: Image Upload-->
                                             <!--div class="drop-zone">-->
                                                 <!--<spans>Click to upload</spans>-->
