--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,6 @@
                                 <!--<div class="services-hover-content">-->
                                     <!--form action="/predict" method="post" enctype="multipart/form-data" class="services-link"-->
                                     <a href="https://pupclassification.herokuapp.com/" target="popup" onclick="window.open('https://pupclassification.herokuapp.com/','popup','width=600,height=600'); return false;"> <!--Praveen Dog Identification link-->
-                                        Open Link in Popup
                                        <!--Display: Image Upload-->
                                             <!--div class="drop-zone">-->
                                                 <!--<spans>Click to upload</spans>-->
@@ -99,6 +98,7 @@
                                 <!--</div>-->
                             </div>
                             <img class="img-fluid" src="https://www.dogmal.com/wp-content/uploads/2016/12/submit_photo.jpg" alt="..." />
+                            Open AI Link in Popup
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             <div class="services-caption-heading">Identify Dog Breed</div>
