--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
                                 <!--</div>-->
                             </div>
                             <img class="img-fluid" src="https://www.dogmal.com/wp-content/uploads/2016/12/submit_photo.jpg" alt="..." />
-                            Open AI Link in Popup
+                             Click to open Dog Breed Classifier tool
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             <div class="services-caption-heading">Identify Dog Breed</div>
