--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <!----------------------------------------------------------------------------------------------
-// IMVAL2001 IBM AI Course final project
+// IMVAL-2001 IBM AI Course final project
 // =============================================================================================
 // Webapp Design and Deployment by: Chin Gon Sin and Ng Chee Sin
 // Image Recognition Design and Deployment by: Praveen Kumar
@@ -102,7 +102,7 @@
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             <div class="services-caption-heading">Identify Dog Breed</div>
-                            <div class="services-caption-subheading text-muted">Upload any dog photo and get an instant dog breed identification using AI.</div>
+                            <div class="services-caption-subheading text-muted">Upload any dog photo and get an instant dog breed identification using our AI tool.</div>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                         <a class="services-link" data-bs-toggle="modal" href="#!">
                             <div class="services-hover">
                                 <!--<div class="services-hover-content"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>-->
-                                <a href="https://www.wikihow.pet/Take-Care-of-a-Dog" target="_blank"> <!--Weblink-->
+                                <a href="https://www.wikihow.pet/Take-Care-of-a-Dog" target="popup" onclick="window.open('https://www.wikihow.pet/Take-Care-of-a-Dog','popup','width=600,height=600'); return false;"> <!--Weblink-->
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/6w5t77h/pexels-ivan-babydov-7788657.jpg" alt="..." />
                         </a>
@@ -153,7 +153,7 @@
                 </div>
                 <br>
                 <p>
-                <span style="color: darkgrey; font-size: 10px; text-align: center; font-style:italic">
+                <span style="color: darkgrey; font-size: 12px; text-align: center; font-style:italic">
                     * Disclaimer: For the purpose of this final project for IMVAI-2001, our dataset does not cover all the breeds as the total size of all the breeds is outside the free storage capacity of online app deployment platform.</span>
             </div>
         </div>
