--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rakkas" rel="stylesheet" type="text/css" />
     
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CheeSin-IBM/DogBreed/main/templates/styles.css" />
+    <link href="https://drive.google.com/uc?export=view&id=1Owy3w8C7fEJ6aV4cBEVaGvuUO0dZRJOL" rel="stylesheet" />
     
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
