--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 // IMVAL-2001 IBM AI Course final project
 // =============================================================================================
 // Webapp Design and Deployment by: Chin Gon Sin and Ng Chee Sin
-// Image Recognition Design and Deployment by: Praveen Kumar
+// Image Recognition Design and Deployment by: Praveen Kumar and Ng Chee Sin
 // Webchat Design and Deployment by: Robin Lim, Ong Siok Hoon (Iris) and Tan Wei Hong
 //==============================================================================================
 -->
