--- a/templates/index.html
+++ b/templates/index.html
@@ -440,7 +440,7 @@ darkgrey;">Designed by IMVAI-2001 AI Practitioner team 3: Praveen Kumar, Ong Sio
     <!-- Script: Webchat Custom Launcher -->
     <button type="button" class="chatLauncher" style="display:none;">
         <div>
-            <strong>Getting bored?</strong> Come have a dog chat!
+            <strong><mark>Getting bored?</strong></mark> Come have a dog chat! <i><b>Woof Woof!</i></b>
         </div>
     </button>
 
