--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="masthead-subheading">Welcome dog lovers!</div>
             <div class="masthead-heading text-uppercase">It's Lovely to meet you</div>
-            <a class="btn btn-primary btn-xl text-uppercase" href="#services">Lets get it on!</a>
+            <a class="btn btn-primary btn-xl text-uppercase" href="#services">Lets get on it!</a>
             <div class="masthead-subheading">&nbsp</div>
             <div class="masthead-subheading">&nbsp</div>
             <div class="masthead-subheading">&nbsp</div>
