--- a/templates/index.html
+++ b/templates/index.html
@@ -287,7 +287,6 @@
                 <div class="col-lg-4 text-lg-start">Copyright &copy; Dog Lovers Paradise 2022<br><span style="color: 
 
 darkgrey;">Designed by IMVAI-2001 AI Practitioner team 3: Praveen Kumar, Ong Siok Hoon (Iris), Chin Gon Sin, Ng Chee Sin, Robin Lim and Tan Wei Hong</span></div>
-                <!--
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -297,7 +296,6 @@ darkgrey;">Designed by IMVAI-2001 AI Practitioner team 3: Praveen Kumar, Ong Sio
                     <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                     <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
                 </div>
-                -->
             </div>
         </div>
     </footer>
@@ -440,7 +438,7 @@ darkgrey;">Designed by IMVAI-2001 AI Practitioner team 3: Praveen Kumar, Ong Sio
     <!-- Script: Webchat Custom Launcher -->
     <button type="button" class="chatLauncher" style="display:none;">
         <div>
-            <strong><mark>Getting bored?</strong></mark> Come have a dog chat! <i><b>Woof Woof!</i></b>
+            <strong><mark>Getting bored?</strong></mark> Come have a dog chat! <i><b>Woof Woof!</i></b><i class="fas fa-dog" style="font-size:24px" aria-hidden="true"></i>
         </div>
     </button>
 
