--- a/templates/index.html
+++ b/templates/index.html
@@ -269,7 +269,7 @@
                 <!-- an error submitting the form-->
                 <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                 <!-- Submit Button-->
-                <div class="text-center"><button class="btn btn-warning btn-xl text-uppercase disabled" id="submitButton" type="submit">Leave your contact</button></div>
+                <div class="text-center"><button class="btn btn-warning btn-xl text-uppercase disabled" id="submitButton" type="submit"> <b>Leave your contact</b></button></div>
             </form>
         </div>
     </section>
@@ -287,9 +287,9 @@ darkgrey;">Designed by IMVAI-2001 AI Practitioner team 3: Praveen Kumar, Ong Sio
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                 </div>
-                <div class="col-lg-4 text-lg-end">
+                <!--<div class="col-lg-4 text-lg-end">
                     <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                    <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                    <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>-->
                 </div>
             </div>
         </div>
