--- a/templates/index.html
+++ b/templates/index.html
@@ -132,8 +132,8 @@
                                 <!DOCTYPE html>
                                 <html>
                                 <body>
-                                <iframe width="640" height="360"
-                                src="https://www.youtube.com/embed/ilgM5IYjIG8"
+                                <iframe width="560" height="315"
+                                src="https://www.youtube-nocookie.com/embed/ilgM5IYjIG8"
                                 frameborder="0" allowfullscreen>>
                                 </iframe>
                                 </body>
