--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                                 <a href="https://www.wikihow.pet/Take-Care-of-a-Dog" target="popup" onclick="window.open('https://www.wikihow.pet/Take-Care-of-a-Dog','popup','width=600,height=600'); return false;"> <!--Weblink-->
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/6w5t77h/pexels-ivan-babydov-7788657.jpg" alt="..." />
-                             Click to open WikiHow.Pet Dog Basics
+                             Click to open wikiHow.Pet Dog Basics
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             
