--- a/templates/index.html
+++ b/templates/index.html
@@ -140,6 +140,7 @@
                                 </html>
                             </div>
                             <img class="img-fluid" src="https://i.ibb.co/4WJGgvz/pexels-cottonbro-6568950.jpg" alt="..." />
+                             Click to open video on Healthy Feeding
                         </a>
                         <div class="services-caption" style="background-color: rgba(248, 249, 250); border-radius: 0px 0px 20px 20px;">
                             
